1835 - 1920 Fixed bootstrap collapse issue (0.75)

--- a/devtl-app/public/css/custom.css
+++ b/devtl-app/public/css/custom.css
@@ -8,7 +8,6 @@ html {
     font-size: 16px;
   }
 }
-
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
@@ -20,18 +19,18 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
-
 .container {
   max-width: 960px;
 }
-
 .pricing-header {
   max-width: 700px;
 }
-
 .card-deck .card {
   min-width: 220px;
 }
-
-.border-top { border-top: 1px solid #e5e5e5; }
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
+.border-top {
+  border-top: 1px solid #e5e5e5;
+}
+.border-bottom {
+  border-bottom: 1px solid #e5e5e5;
+}
